<?xml version="1.0"?>
<package>
  <name>my_topic</name>
  <version>0.0.0</version>
  <description>topic test package</description>
  <maintainer email="joe@ash.jp">joe</maintainer>
  <license>BSD</license>
  <url type="website">http://joe.ash.jp/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <export></export>
</package>
